--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     <header class="header">
+        <form>
+        <label for="username">Имя пользователя:</label>
+<input type="text" id="username" name="username" required>
+
+<label for="email">Email:</label>
+<input type="email" id="email" name="email" required>
+
+<label for="password">Пароль:</label>
+<input type="password" id="password" name="password" required>
+
+<label for="confirm_password">Подтвердите пароль:</label>
+<input type="password" id="confirm_password" name="confirm_password" required>
+
+<button type="submit">Отправить</button>
+</form>
         <div class="header-top">
                 <div class="wrapper">
                     <div class="header-top__content">
