--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <header class="header">
+        <form class="form-inline" action="/action_page.php">
+<label for="email">Email:</label>
+<input type="email" id="email" placeholder="Введите email" name="email">
+<label for="pwd">Пароль:</label>
+<input type="password" id="pwd" placeholder="Введите пароль" name="pswd">
+<label>
+<input type="checkbox" name="remember"> Запомнить меня
+</label>
+<button type="submit">Отправить</button>
+        </form>
         <div class="header-top">
                 <div class="wrapper">
                     <div class="header-top__content">
