--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <header class="header">
+        <form action="/" method="post">
+<input type="text" placeholder="Введите ваше имя"></input>
+<input type="email" placeholder="Введите ваш email"></input>
+<button>type="submit">Отправить</button>
+</form>
+
         <div class="header-top">
                 <div class="wrapper">
                     <div class="header-top__content">
