--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <form action="/" method="post">
 <input type="text" placeholder="Введите ваше имя"></input>
 <input type="email" placeholder="Введите ваш email"></input>
-<button>type="submit">Отправить</button>
+<button>Отправить</button>
 </form>
 
         <div class="header-top">
